--- a/META.yml
+++ b/META.yml
@@ -20,6 +20,8 @@ no_index:
     - inc
     - share
     - t
+recommends:
+  Readonly::XS: 1.05
 requires:
   Data::UUID: 1.149
   Exception::Class: 1.22
@@ -29,7 +31,8 @@ requires:
   Object::InsideOut: 3.53
   Perl::Dist: 1.12
   Readonly: 1.03
-  perl: 5.8.0
+  perl: 5.6.0
+  version: 0.76
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.1401000
+version: 0.015000
