--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
   Test::Output: 0.11
   Test::UseAllModules: 0.09
 distribution_type: module
-generated_by: 'Module::Install version 0.79'
+generated_by: 'Module::Install version 0.80'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,6 +23,7 @@ no_index:
 recommends:
   Readonly::XS: 1.05
 requires:
+  Alien::WiX: v0.300000
   Data::UUID: 1.149
   Exception::Class: 1.22
   File::ShareDir: 1.00
@@ -31,8 +32,11 @@ requires:
   Object::InsideOut: 3.53
   Perl::Dist: 1.12
   Readonly: 1.03
+  Win32: 0.35
   perl: 5.6.0
   version: 0.76
 resources:
+  bugtracker: http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Perl-Dist-WiX
   license: http://dev.perl.org/licenses/
-version: 0.150000
+  repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX
+version: 0.160000
