--- a/META.yml
+++ b/META.yml
@@ -24,14 +24,20 @@ recommends:
   Readonly::XS: 1.05
 requires:
   Alien::WiX: v0.300000
+  Data::Dump::Streamer: 2.08
   Data::UUID: 1.149
+  Devel::StackTrace: 1.20
   Exception::Class: 1.22
   File::ShareDir: 1.00
+  IO::String: 1.08
   List::MoreUtils: 0.07
   Module::CoreList: 2.17
   Object::InsideOut: 3.53
   Perl::Dist: 1.12
   Readonly: 1.03
+  Scalar::Util: 1.19
+  Storable: 2.15
+  URI: 1.35
   Win32: 0.35
   perl: 5.6.0
   version: 0.76
@@ -39,4 +45,4 @@ resources:
   bugtracker: http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Perl-Dist-WiX
   license: http://dev.perl.org/licenses/
   repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX
-version: 0.160000
+version: 0.161000
