--- a/META.yml
+++ b/META.yml
@@ -3,12 +3,14 @@ abstract: 'Experimental 4th generation Win32 Perl distribution builder'
 author:
   - 'Curtis Jewell <csjewell@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.11
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0.47
   Test::Output: 0.11
   Test::UseAllModules: 0.09
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.80'
+generated_by: 'Module::Install version 0.82'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,7 +25,7 @@ no_index:
 recommends:
   Readonly::XS: 1.05
 requires:
-  Alien::WiX: v0.300000
+  Alien::WiX: 0.300000
   Data::Dump::Streamer: 2.08
   Data::UUID: 1.149
   Devel::StackTrace: 1.20
@@ -34,6 +36,7 @@ requires:
   Module::CoreList: 2.17
   Object::InsideOut: 3.53
   Perl::Dist: 1.12
+  Process: 0.23
   Readonly: 1.03
   Scalar::Util: 1.19
   Storable: 2.15
@@ -43,6 +46,7 @@ requires:
   version: 0.76
 resources:
   bugtracker: http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Perl-Dist-WiX
+  homepage: http://csjewell.comyr.com/perl/
   license: http://dev.perl.org/licenses/
-  repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX
-version: 0.162
+  repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX/
+version: 0.169
