--- a/META.yml
+++ b/META.yml
@@ -30,6 +30,7 @@ requires:
   Data::UUID: 1.149
   Devel::StackTrace: 1.20
   Exception::Class: 1.22
+  File::List::Object: 0.188
   File::ShareDir: 1.00
   IO::String: 1.08
   List::MoreUtils: 0.07
@@ -38,10 +39,9 @@ requires:
   Perl::Dist: 1.14
   Process: 0.26
   Readonly: 1.03
-  Scalar::Util: 1.19
-  Storable: 2.15
   URI: 1.35
   Win32: 0.35
+  Win32API::File: 0.1001
   perl: 5.8.1
   version: 0.76
 resources:
@@ -49,4 +49,4 @@ resources:
   homepage: http://csjewell.comyr.com/perl/
   license: http://dev.perl.org/licenses/
   repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX/
-version: 0.183
+version: 0.184
