--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Experimental 4th generation Win32 Perl distribution builder'
+abstract: '4th generation Win32 Perl distribution builder'
 author:
   - 'Curtis Jewell <csjewell@cpan.org>'
 build_requires:
@@ -30,17 +30,18 @@ requires:
   Data::UUID: 1.149
   Devel::StackTrace: 1.20
   Exception::Class: 1.22
-  File::List::Object: 0.188
+  File::List::Object: 0.189
   File::ShareDir: 1.00
   IO::String: 1.08
   List::MoreUtils: 0.07
   Module::CoreList: 2.17
   Object::InsideOut: 3.53
-  Perl::Dist: 1.15
+  Perl::Dist: 1.16
   Process: 0.26
   Readonly: 1.03
   URI: 1.35
   Win32: 0.35
+  Win32::Exe: 0.11
   Win32API::File: 0.1001
   perl: 5.8.1
   version: 0.76
@@ -50,4 +51,4 @@ resources:
   homepage: http://csjewell.comyr.com/perl/
   license: http://dev.perl.org/licenses/
   repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX/
-version: 0.191
+version: 0.192
