--- a/META.yml
+++ b/META.yml
@@ -4,9 +4,11 @@ author:
   - 'Curtis Jewell <csjewell@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
-  Test::More: 0.61
+  Test::LongString: 0.11
+  Test::More: 0.86
   Test::Output: 0.11
-  Test::Perl::Dist: 0.200
+  Test::Perl::Dist: 0.202
+  Test::Script: 1.03
   Test::UseAllModules: 0.09
 configure_requires:
   ExtUtils::MakeMaker: 6.42
@@ -27,29 +29,49 @@ recommends:
   Readonly::XS: 1.05
 requires:
   Alien::WiX: 0.300000
-  CPAN: 1.9450
+  Archive::Tar: 1.42
+  Archive::Zip: 1.26
+  CPAN: 1.94
   Data::Dump::Streamer: 2.08
   Data::UUID: 1.149
   Devel::StackTrace: 1.20
   Exception::Class: 1.22
   File::Copy::Recursive: 0.38
+  File::Find::Rule: 0.30
+  File::HomeDir: 0.82
   File::List::Object: 0.189
+  File::Path: 2.07
   File::PathList: 1.04
+  File::Remove: 1.42
   File::ShareDir: 1.00
+  File::Spec: 3.29
+  File::Temp: 0.21
+  File::pushd: 1.00
+  HTTP::Status: 5.817
   IO::Capture: 0.05
   IO::String: 1.08
+  IPC::Run3: 0.042
+  LWP::Online: 1.07
+  LWP::UserAgent: 5.823
+  LWP::UserAgent::WithCache: 0.06
   List::MoreUtils: 0.07
   Module::CoreList: 2.18
-  Moose: 0.88
+  Moose: 0.90
   Object::Tiny: 1.06
+  PAR::Dist: 0.42
+  Params::Util: 0.35
+  Portable::Dist: 0.04
+  Probe::Perl: 0.01
   Process: 0.26
   Readonly: 1.03
   Template: 2.22
   URI: 1.35
-  WiX3: 0.006
+  WiX3: 0.008
   Win32: 0.35
   Win32::Exe: 0.11
+  Win32::File::Object: 0.01
   Win32API::File: 0.1001
+  YAML::Tiny: 1.36
   parent: 0.221
   perl: 5.8.1
 resources:
@@ -59,4 +81,4 @@ resources:
   homepage: http://csjewell.comyr.com/perl/
   license: http://dev.perl.org/licenses/
   repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX/
-version: 1.090_102
+version: 1.090_103
