Import of CSJEWELL/Perl-Dist-WiX-1.100 from CPAN.
gitpan-cpan-distribution: Perl-Dist-WiX
gitpan-cpan-version:      1.100
gitpan-cpan-path:         CSJEWELL/Perl-Dist-WiX-1.100.tar.gz
gitpan-cpan-author:       CSJEWELL
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -57,6 +57,7 @@ requires:
   List::MoreUtils: 0.07
   Module::CoreList: 2.18
   Moose: 0.90
+  MooseX::NonMoose: 0.05
   Object::Tiny: 1.06
   PAR::Dist: 0.42
   Params::Util: 0.35
@@ -81,4 +82,4 @@ resources:
   homepage: http://csjewell.comyr.com/perl/
   license: http://dev.perl.org/licenses/
   repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX/
-version: 1.090_103
+version: 1.100
