--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,7 @@ build_requires:
   Test::LongString: 0.11
   Test::More: 0.86
   Test::Output: 0.11
-  Test::Perl::Dist: 0.202
+  Test::Perl::Dist: 0.203
   Test::Script: 1.03
   Test::UseAllModules: 0.09
 configure_requires:
@@ -26,16 +26,16 @@ no_index:
 provides:
   Perl::Dist::VanillaWiX:
     file: lib/Perl/Dist/VanillaWiX.pm
-    version: 1.102
+    version: 1.102_101
   Perl::Dist::WiX:
     file: lib/Perl/Dist/WiX.pm
-    version: 1.102002
+    version: 1.102_101
   Perl::Dist::WiX::Asset::Binary:
     file: lib/Perl/Dist/WiX/Asset/Binary.pm
     version: 1.102
   Perl::Dist::WiX::Asset::DistBase:
     file: lib/Perl/Dist/WiX/Asset/DistBase.pm
-    version: 1.102
+    version: 1.102_101
   Perl::Dist::WiX::Asset::DistFile:
     file: lib/Perl/Dist/WiX/Asset/DistFile.pm
     version: 1.102
@@ -47,40 +47,40 @@ provides:
     version: 1.102
   Perl::Dist::WiX::Asset::Launcher:
     file: lib/Perl/Dist/WiX/Asset/Launcher.pm
-    version: 1.102002
+    version: 1.102
   Perl::Dist::WiX::Asset::Library:
     file: lib/Perl/Dist/WiX/Asset/Library.pm
-    version: 1.102002
+    version: 1.102
   Perl::Dist::WiX::Asset::Module:
     file: lib/Perl/Dist/WiX/Asset/Module.pm
-    version: 1.102002
+    version: 1.102_100
   Perl::Dist::WiX::Asset::PAR:
     file: lib/Perl/Dist/WiX/Asset/PAR.pm
     version: 1.102
   Perl::Dist::WiX::Asset::Perl:
     file: lib/Perl/Dist/WiX/Asset/Perl.pm
-    version: 1.102002
+    version: 1.102_101
   Perl::Dist::WiX::Asset::Website:
     file: lib/Perl/Dist/WiX/Asset/Website.pm
-    version: 1.102002
+    version: 1.102_101
   Perl::Dist::WiX::BuildPerl:
     file: lib/Perl/Dist/WiX/BuildPerl.pm
-    version: 1.102002
+    version: 1.102_101
   Perl::Dist::WiX::Checkpoint:
     file: lib/Perl/Dist/WiX/Checkpoint.pm
     version: 1.102
   Perl::Dist::WiX::DirectoryCache:
     file: lib/Perl/Dist/WiX/DirectoryCache.pm
-    version: 1.102002
+    version: 1.102_101
   Perl::Dist::WiX::DirectoryTree2:
     file: lib/Perl/Dist/WiX/DirectoryTree2.pm
-    version: 1.102
+    version: 1.102_101
   Perl::Dist::WiX::Exceptions:
     file: lib/Perl/Dist/WiX/Exceptions.pm
-    version: 1.102002
+    version: 1.102
   Perl::Dist::WiX::FeatureTree2:
     file: lib/Perl/Dist/WiX/FeatureTree2.pm
-    version: 1.102002
+    version: 1.102
   Perl::Dist::WiX::Fragment::CreateFolder:
     file: lib/Perl/Dist/WiX/Fragment/CreateFolder.pm
     version: 1.102
@@ -89,37 +89,37 @@ provides:
     version: 1.102
   Perl::Dist::WiX::Fragment::Files:
     file: lib/Perl/Dist/WiX/Fragment/Files.pm
-    version: 1.102002
+    version: 1.102_101
   Perl::Dist::WiX::Fragment::StartMenu:
     file: lib/Perl/Dist/WiX/Fragment/StartMenu.pm
     version: 1.102
   Perl::Dist::WiX::IconArray:
     file: lib/Perl/Dist/WiX/IconArray.pm
-    version: 1.102002
+    version: 1.102_101
   Perl::Dist::WiX::Installation:
     file: lib/Perl/Dist/WiX/Installation.pm
     version: 1.102001
   Perl::Dist::WiX::Libraries:
     file: lib/Perl/Dist/WiX/Libraries.pm
-    version: 1.102
+    version: 1.102_101
   Perl::Dist::WiX::PrivateTypes:
     file: lib/Perl/Dist/WiX/PrivateTypes.pm
     version: 1.102
   Perl::Dist::WiX::ReleaseNotes:
     file: lib/Perl/Dist/WiX/ReleaseNotes.pm
-    version: 1.102
+    version: 1.102_101
   Perl::Dist::WiX::Role::Asset:
     file: lib/Perl/Dist/WiX/Role/Asset.pm
-    version: 1.102
+    version: 1.102_101
   Perl::Dist::WiX::Role::NonURLAsset:
     file: lib/Perl/Dist/WiX/Role/NonURLAsset.pm
     version: 1.102
   Perl::Dist::WiX::Tag::Directory:
     file: lib/Perl/Dist/WiX/Tag/Directory.pm
-    version: 1.102002
+    version: 1.102
   Perl::Dist::WiX::Tag::DirectoryRef:
     file: lib/Perl/Dist/WiX/Tag/DirectoryRef.pm
-    version: 1.102002
+    version: 1.102_101
   Perl::Dist::WiX::Tag::Icon:
     file: lib/Perl/Dist/WiX/Tag/Icon.pm
     version: 1.102
@@ -128,7 +128,7 @@ provides:
     version: 1.102
   Perl::Dist::WiX::Toolchain:
     file: lib/Perl/Dist/WiX/Toolchain.pm
-    version: 1.102002
+    version: 1.102_101
   Perl::Dist::WiX::Types:
     file: lib/Perl/Dist/WiX/Types.pm
     version: 1.102
@@ -166,7 +166,7 @@ requires:
   LWP::UserAgent: 5.823
   LWP::UserAgent::WithCache: 0.06
   List::MoreUtils: 0.07
-  Module::CoreList: 2.18
+  Module::CoreList: 2.26
   Moose: 0.90
   MooseX::Meta::TypeConstraint::Intersection: 0.01
   MooseX::NonMoose: 0.05
@@ -195,4 +195,4 @@ resources:
   homepage: http://csjewell.comyr.com/perl/
   license: http://dev.perl.org/licenses/
   repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX/
-version: 1.102002
+version: 1.102_101
