Import of CSJEWELL/Perl-Dist-WiX-1.200_101 from CPAN.
gitpan-cpan-distribution: Perl-Dist-WiX
gitpan-cpan-version:      1.200_101
gitpan-cpan-path:         CSJEWELL/Perl-Dist-WiX-1.200_101.tar.gz
gitpan-cpan-author:       CSJEWELL
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ build_requires:
   Test::Script: 1.03
   Test::UseAllModules: 0.09
 configure_requires:
-  CPAN: 1.9456
+  CPAN: 1.9457
   Module::Build: 0.36
 generated_by: 'Module::Build version 0.3607'
 license: perl
@@ -29,10 +29,10 @@ provides:
     version: 1.200
   Perl::Dist::WiX:
     file: lib/Perl/Dist/WiX.pm
-    version: 1.200002
+    version: 1.200_101
   Perl::Dist::WiX::Asset::Binary:
     file: lib/Perl/Dist/WiX/Asset/Binary.pm
-    version: 1.200
+    version: 1.200_101
   Perl::Dist::WiX::Asset::DistBase:
     file: lib/Perl/Dist/WiX/Asset/DistBase.pm
     version: 1.200
@@ -47,7 +47,7 @@ provides:
     version: 1.200
   Perl::Dist::WiX::Asset::Launcher:
     file: lib/Perl/Dist/WiX/Asset/Launcher.pm
-    version: 1.200
+    version: 1.200_101
   Perl::Dist::WiX::Asset::Library:
     file: lib/Perl/Dist/WiX/Asset/Library.pm
     version: 1.200
@@ -62,22 +62,22 @@ provides:
     version: 1.200
   Perl::Dist::WiX::Asset::Website:
     file: lib/Perl/Dist/WiX/Asset/Website.pm
-    version: 1.200
+    version: 1.200_101
   Perl::Dist::WiX::BuildPerl:
     file: lib/Perl/Dist/WiX/BuildPerl.pm
-    version: 1.200001
+    version: 1.200_101
   Perl::Dist::WiX::Checkpoint:
     file: lib/Perl/Dist/WiX/Checkpoint.pm
-    version: 1.200001
+    version: 1.200_101
   Perl::Dist::WiX::DirectoryCache:
     file: lib/Perl/Dist/WiX/DirectoryCache.pm
-    version: 1.200
+    version: 1.200_101
   Perl::Dist::WiX::DirectoryTree2:
     file: lib/Perl/Dist/WiX/DirectoryTree2.pm
-    version: 1.200002
+    version: 1.200_101
   Perl::Dist::WiX::Exceptions:
     file: lib/Perl/Dist/WiX/Exceptions.pm
-    version: 1.200
+    version: 1.200_101
   Perl::Dist::WiX::FeatureTree2:
     file: lib/Perl/Dist/WiX/FeatureTree2.pm
     version: 1.200001
@@ -89,19 +89,19 @@ provides:
     version: 1.200
   Perl::Dist::WiX::Fragment::Files:
     file: lib/Perl/Dist/WiX/Fragment/Files.pm
-    version: 1.200002
+    version: 1.200_101
   Perl::Dist::WiX::Fragment::StartMenu:
     file: lib/Perl/Dist/WiX/Fragment/StartMenu.pm
-    version: 1.200
+    version: 1.200_101
   Perl::Dist::WiX::IconArray:
     file: lib/Perl/Dist/WiX/IconArray.pm
     version: 1.200001
   Perl::Dist::WiX::Installation:
     file: lib/Perl/Dist/WiX/Installation.pm
-    version: 1.200
+    version: 1.200_100
   Perl::Dist::WiX::Libraries:
     file: lib/Perl/Dist/WiX/Libraries.pm
-    version: 1.200
+    version: 1.200_100
   Perl::Dist::WiX::ReleaseNotes:
     file: lib/Perl/Dist/WiX/ReleaseNotes.pm
     version: 1.200
@@ -113,13 +113,13 @@ provides:
     version: 1.200
   Perl::Dist::WiX::Support:
     file: lib/Perl/Dist/WiX/Support.pm
-    version: 1.200
+    version: 1.200_101
   Perl::Dist::WiX::Tag::Directory:
     file: lib/Perl/Dist/WiX/Tag/Directory.pm
-    version: 1.200002
+    version: 1.200_100
   Perl::Dist::WiX::Tag::DirectoryRef:
     file: lib/Perl/Dist/WiX/Tag/DirectoryRef.pm
-    version: 1.200002
+    version: 1.200_100
   Perl::Dist::WiX::Tag::Icon:
     file: lib/Perl/Dist/WiX/Tag/Icon.pm
     version: 1.200
@@ -128,14 +128,16 @@ provides:
     version: 1.102
   Perl::Dist::WiX::Toolchain:
     file: lib/Perl/Dist/WiX/Toolchain.pm
-    version: 1.200001
+    version: 1.200_101
   Perl::Dist::WiX::Types:
     file: lib/Perl/Dist/WiX/Types.pm
-    version: 1.200
+    version: 1.200_101
   Perl::Dist::WiX::Util::Machine:
     file: lib/Perl/Dist/WiX/Util/Machine.pm
-    version: 1.200
+    version: 1.200_100
 recommends:
+  Growl::GNTP: 0.07
+  IO::Compress::Xz: 2.025
   Readonly::XS: 1.05
 requires:
   Alien::WiX: 0.300000
@@ -161,13 +163,14 @@ requires:
   File::pushd: 1.00
   HTTP::Status: 5.817
   IO::Capture: 0.05
+  IO::Compress::Bzip2: 2.025
   IO::String: 1.08
   IPC::Run3: 0.042
   LWP::Online: 1.07
   LWP::UserAgent: 5.823
   LWP::UserAgent::WithCache: 0.06
   List::MoreUtils: 0.07
-  Module::CoreList: 2.29
+  Module::CoreList: 2.32
   Moose: 0.90
   MooseX::NonMoose: 0.05
   MooseX::Singleton: 0
@@ -197,4 +200,4 @@ resources:
   homepage: http://csjewell.comyr.com/perl/
   license: http://dev.perl.org/licenses/
   repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX/
-version: 1.200002
+version: 1.200_101
