Import of CSJEWELL/Perl-Dist-WiX-1.250 from CPAN.
gitpan-cpan-distribution: Perl-Dist-WiX
gitpan-cpan-version:      1.250
gitpan-cpan-path:         CSJEWELL/Perl-Dist-WiX-1.250.tar.gz
gitpan-cpan-author:       CSJEWELL
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -26,124 +26,124 @@ no_index:
 provides:
   Perl::Dist::VanillaWiX:
     file: lib/Perl/Dist/VanillaWiX.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX:
     file: lib/Perl/Dist/WiX.pm
-    version: 1.200_102
+    version: 1.250
   Perl::Dist::WiX::Asset::Binary:
     file: lib/Perl/Dist/WiX/Asset/Binary.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::Asset::DistBase:
     file: lib/Perl/Dist/WiX/Asset/DistBase.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX::Asset::DistFile:
     file: lib/Perl/Dist/WiX/Asset/DistFile.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX::Asset::Distribution:
     file: lib/Perl/Dist/WiX/Asset/Distribution.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX::Asset::File:
     file: lib/Perl/Dist/WiX/Asset/File.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX::Asset::Launcher:
     file: lib/Perl/Dist/WiX/Asset/Launcher.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::Asset::Library:
     file: lib/Perl/Dist/WiX/Asset/Library.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX::Asset::Module:
     file: lib/Perl/Dist/WiX/Asset/Module.pm
-    version: 1.200_102
+    version: 1.250
   Perl::Dist::WiX::Asset::PAR:
     file: lib/Perl/Dist/WiX/Asset/PAR.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX::Asset::Perl:
     file: lib/Perl/Dist/WiX/Asset/Perl.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX::Asset::Website:
     file: lib/Perl/Dist/WiX/Asset/Website.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::BuildPerl:
     file: lib/Perl/Dist/WiX/BuildPerl.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::Checkpoint:
     file: lib/Perl/Dist/WiX/Checkpoint.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::DirectoryCache:
     file: lib/Perl/Dist/WiX/DirectoryCache.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::DirectoryTree2:
     file: lib/Perl/Dist/WiX/DirectoryTree2.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::Exceptions:
     file: lib/Perl/Dist/WiX/Exceptions.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::FeatureTree2:
     file: lib/Perl/Dist/WiX/FeatureTree2.pm
-    version: 1.200001
+    version: 1.250
   Perl::Dist::WiX::Fragment::CreateFolder:
     file: lib/Perl/Dist/WiX/Fragment/CreateFolder.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX::Fragment::Environment:
     file: lib/Perl/Dist/WiX/Fragment/Environment.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX::Fragment::Files:
     file: lib/Perl/Dist/WiX/Fragment/Files.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::Fragment::StartMenu:
     file: lib/Perl/Dist/WiX/Fragment/StartMenu.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::IconArray:
     file: lib/Perl/Dist/WiX/IconArray.pm
-    version: 1.200001
+    version: 1.250
   Perl::Dist::WiX::Installation:
     file: lib/Perl/Dist/WiX/Installation.pm
-    version: 1.200_100
+    version: 1.250
   Perl::Dist::WiX::Libraries:
     file: lib/Perl/Dist/WiX/Libraries.pm
-    version: 1.200_100
+    version: 1.250
   Perl::Dist::WiX::ReleaseNotes:
     file: lib/Perl/Dist/WiX/ReleaseNotes.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX::Role::Asset:
     file: lib/Perl/Dist/WiX/Role/Asset.pm
-    version: 1.200_102
+    version: 1.250
   Perl::Dist::WiX::Role::NonURLAsset:
     file: lib/Perl/Dist/WiX/Role/NonURLAsset.pm
-    version: 1.200_102
+    version: 1.250
   Perl::Dist::WiX::Support:
     file: lib/Perl/Dist/WiX/Support.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::Tag::Directory:
     file: lib/Perl/Dist/WiX/Tag/Directory.pm
-    version: 1.200_100
+    version: 1.250
   Perl::Dist::WiX::Tag::DirectoryRef:
     file: lib/Perl/Dist/WiX/Tag/DirectoryRef.pm
-    version: 1.200_100
+    version: 1.250
   Perl::Dist::WiX::Tag::Icon:
     file: lib/Perl/Dist/WiX/Tag/Icon.pm
-    version: 1.200
+    version: 1.250
   Perl::Dist::WiX::Tag::MergeModule:
     file: lib/Perl/Dist/WiX/Tag/MergeModule.pm
-    version: 1.102
+    version: 1.250
   Perl::Dist::WiX::Toolchain:
     file: lib/Perl/Dist/WiX/Toolchain.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::Types:
     file: lib/Perl/Dist/WiX/Types.pm
-    version: 1.200_101
+    version: 1.250
   Perl::Dist::WiX::Util::Machine:
     file: lib/Perl/Dist/WiX/Util/Machine.pm
-    version: 1.200_100
+    version: 1.250
 recommends:
   Growl::GNTP: 0.07
   IO::Compress::Xz: 2.025
   Readonly::XS: 1.05
 requires:
   Alien::WiX: 0.300000
-  Archive::Tar: 1.42
+  Archive::Tar: 1.66
   Archive::Zip: 1.26
-  CPAN: 1.9457
+  CPAN: 1.9458
   Clone: 0.31
   Data::Dump::Streamer: 2.08
   Data::UUID: 1.149
@@ -171,7 +171,7 @@ requires:
   LWP::UserAgent::WithCache: 0.06
   List::MoreUtils: 0.07
   Module::CoreList: 2.32
-  Moose: 0.90
+  Moose: '>= 0.90, < 1.09'
   MooseX::NonMoose: 0.05
   MooseX::Singleton: 0
   MooseX::Types: 0
@@ -185,7 +185,7 @@ requires:
   Readonly: 1.03
   Template: 2.22
   URI: 1.35
-  WiX3: 0.009100
+  WiX3: 0.009102
   Win32: 0.35
   Win32::Exe: 0.13
   Win32::File::Object: 0.01
@@ -200,4 +200,4 @@ resources:
   homepage: http://csjewell.comyr.com/perl/
   license: http://dev.perl.org/licenses/
   repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX/
-version: 1.200_102
+version: 1.250
