--- a/META.yml
+++ b/META.yml
@@ -10,9 +10,11 @@ build_requires:
   Test::Script: 1.03
   Test::UseAllModules: 0.09
 configure_requires:
-  CPAN: 1.9460
+  CPAN: 1.9462
   Module::Build: 0.36
-generated_by: 'Module::Build version 0.3607'
+  parent: 0.221
+dynamic_config: 1
+generated_by: 'Module::Build version 0.3705, CPAN::Meta::Converter version 2.110440'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -26,127 +28,127 @@ no_index:
 provides:
   Perl::Dist::VanillaWiX:
     file: lib/Perl/Dist/VanillaWiX.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX:
     file: lib/Perl/Dist/WiX.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Asset::Binary:
     file: lib/Perl/Dist/WiX/Asset/Binary.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Asset::DistBase:
     file: lib/Perl/Dist/WiX/Asset/DistBase.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Asset::DistFile:
     file: lib/Perl/Dist/WiX/Asset/DistFile.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Asset::Distribution:
     file: lib/Perl/Dist/WiX/Asset/Distribution.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Asset::File:
     file: lib/Perl/Dist/WiX/Asset/File.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Asset::Launcher:
     file: lib/Perl/Dist/WiX/Asset/Launcher.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Asset::Library:
     file: lib/Perl/Dist/WiX/Asset/Library.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Asset::Module:
     file: lib/Perl/Dist/WiX/Asset/Module.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Asset::PAR:
     file: lib/Perl/Dist/WiX/Asset/PAR.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Asset::Perl:
     file: lib/Perl/Dist/WiX/Asset/Perl.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Asset::Website:
     file: lib/Perl/Dist/WiX/Asset/Website.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::DirectoryCache:
     file: lib/Perl/Dist/WiX/DirectoryCache.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::DirectoryTree:
     file: lib/Perl/Dist/WiX/DirectoryTree.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Exceptions:
     file: lib/Perl/Dist/WiX/Exceptions.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::FeatureTree:
     file: lib/Perl/Dist/WiX/FeatureTree.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Fragment::CreateFolder:
     file: lib/Perl/Dist/WiX/Fragment/CreateFolder.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Fragment::Environment:
     file: lib/Perl/Dist/WiX/Fragment/Environment.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Fragment::Files:
     file: lib/Perl/Dist/WiX/Fragment/Files.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Fragment::StartMenu:
     file: lib/Perl/Dist/WiX/Fragment/StartMenu.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::IconArray:
     file: lib/Perl/Dist/WiX/IconArray.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Mixin::BuildPerl:
     file: lib/Perl/Dist/WiX/Mixin/BuildPerl.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Mixin::Checkpoint:
     file: lib/Perl/Dist/WiX/Mixin/Checkpoint.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Mixin::Installation:
     file: lib/Perl/Dist/WiX/Mixin/Installation.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Mixin::Libraries:
     file: lib/Perl/Dist/WiX/Mixin/Libraries.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Mixin::Patching:
     file: lib/Perl/Dist/WiX/Mixin/Patching.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Mixin::ReleaseNotes:
     file: lib/Perl/Dist/WiX/Mixin/ReleaseNotes.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Mixin::Support:
     file: lib/Perl/Dist/WiX/Mixin/Support.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::PropertyList:
     file: lib/Perl/Dist/WiX/PropertyList.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Role::Asset:
     file: lib/Perl/Dist/WiX/Role/Asset.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Role::GitPlugin:
     file: lib/Perl/Dist/WiX/Role/GitPlugin.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Role::MultiPlugin:
     file: lib/Perl/Dist/WiX/Role/MultiPlugin.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Role::NonURLAsset:
     file: lib/Perl/Dist/WiX/Role/NonURLAsset.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Tag::Directory:
     file: lib/Perl/Dist/WiX/Tag/Directory.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Tag::DirectoryRef:
     file: lib/Perl/Dist/WiX/Tag/DirectoryRef.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Tag::Icon:
     file: lib/Perl/Dist/WiX/Tag/Icon.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Tag::MergeModule:
     file: lib/Perl/Dist/WiX/Tag/MergeModule.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Toolchain:
     file: lib/Perl/Dist/WiX/Toolchain.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Types:
     file: lib/Perl/Dist/WiX/Types.pm
-    version: 1.250_100
+    version: 1.500
   Perl::Dist::WiX::Util::Machine:
     file: lib/Perl/Dist/WiX/Util/Machine.pm
-    version: 1.250_100
+    version: 1.500
 recommends:
   Growl::GNTP: 0.07
   IO::Compress::Xz: 2.025
@@ -155,7 +157,7 @@ requires:
   Alien::WiX: 0.300000
   Archive::Tar: 1.66
   Archive::Zip: 1.26
-  CPAN: 1.9458
+  CPAN: 1.9462
   Clone: 0.31
   Data::Dump::Streamer: 2.08
   Data::UUID: 1.149
@@ -182,7 +184,7 @@ requires:
   LWP::UserAgent: 5.823
   LWP::UserAgent::WithCache: 0.06
   List::MoreUtils: 0.07
-  Module::CoreList: 2.39
+  Module::CoreList: 2.44
   Moose: 1.08
   MooseX::NonMoose: 0.14
   MooseX::Object::Pluggable: 0.0011
@@ -208,9 +210,9 @@ requires:
   parent: 0.221
   perl: 5.010
 resources:
-  IRC: irc://irc.perl.org/#win32
   bugtracker: http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Perl-Dist-WiX
   homepage: http://csjewell.comyr.com/perl/
   license: http://dev.perl.org/licenses/
   repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX/
-version: 1.250_100
+  x_IRC: irc://irc.perl.org/#win32
+version: 1.500
