Import of CSJEWELL/Perl-Dist-WiX-1.500001 from CPAN.
gitpan-cpan-distribution: Perl-Dist-WiX
gitpan-cpan-version:      1.500001
gitpan-cpan-path:         CSJEWELL/Perl-Dist-WiX-1.500001.tar.gz
gitpan-cpan-author:       CSJEWELL
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: '4th generation Win32 Perl distribution builder'
+abstract: 4th generation Win32 Perl distribution builder
 author:
   - 'Curtis Jewell <csjewell@cpan.org>'
 build_requires:
@@ -10,11 +10,11 @@ build_requires:
   Test::Script: 1.03
   Test::UseAllModules: 0.09
 configure_requires:
-  CPAN: 1.9462
+  CPAN: 1.9600
   Module::Build: 0.36
   parent: 0.221
 dynamic_config: 1
-generated_by: 'Module::Build version 0.3705, CPAN::Meta::Converter version 2.110440'
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110440'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -31,7 +31,7 @@ provides:
     version: 1.500
   Perl::Dist::WiX:
     file: lib/Perl/Dist/WiX.pm
-    version: 1.500
+    version: 1.500001
   Perl::Dist::WiX::Asset::Binary:
     file: lib/Perl/Dist/WiX/Asset/Binary.pm
     version: 1.500
@@ -43,7 +43,7 @@ provides:
     version: 1.500
   Perl::Dist::WiX::Asset::Distribution:
     file: lib/Perl/Dist/WiX/Asset/Distribution.pm
-    version: 1.500
+    version: 1.500001
   Perl::Dist::WiX::Asset::File:
     file: lib/Perl/Dist/WiX/Asset/File.pm
     version: 1.500
@@ -55,7 +55,7 @@ provides:
     version: 1.500
   Perl::Dist::WiX::Asset::Module:
     file: lib/Perl/Dist/WiX/Asset/Module.pm
-    version: 1.500
+    version: 1.500001
   Perl::Dist::WiX::Asset::PAR:
     file: lib/Perl/Dist/WiX/Asset/PAR.pm
     version: 1.500
@@ -64,6 +64,9 @@ provides:
     version: 1.500
   Perl::Dist::WiX::Asset::Website:
     file: lib/Perl/Dist/WiX/Asset/Website.pm
+    version: 1.500
+  Perl::Dist::WiX::BuildPerl::5123:
+    file: lib/Perl/Dist/WiX/BuildPerl/5123.pm
     version: 1.500
   Perl::Dist::WiX::DirectoryCache:
     file: lib/Perl/Dist/WiX/DirectoryCache.pm
@@ -94,7 +97,7 @@ provides:
     version: 1.500
   Perl::Dist::WiX::Mixin::BuildPerl:
     file: lib/Perl/Dist/WiX/Mixin/BuildPerl.pm
-    version: 1.500
+    version: 1.500001
   Perl::Dist::WiX::Mixin::Checkpoint:
     file: lib/Perl/Dist/WiX/Mixin/Checkpoint.pm
     version: 1.500
@@ -103,7 +106,7 @@ provides:
     version: 1.500
   Perl::Dist::WiX::Mixin::Libraries:
     file: lib/Perl/Dist/WiX/Mixin/Libraries.pm
-    version: 1.500
+    version: 1.500001
   Perl::Dist::WiX::Mixin::Patching:
     file: lib/Perl/Dist/WiX/Mixin/Patching.pm
     version: 1.500
@@ -112,7 +115,7 @@ provides:
     version: 1.500
   Perl::Dist::WiX::Mixin::Support:
     file: lib/Perl/Dist/WiX/Mixin/Support.pm
-    version: 1.500
+    version: 1.500001
   Perl::Dist::WiX::PropertyList:
     file: lib/Perl/Dist/WiX/PropertyList.pm
     version: 1.500
@@ -142,10 +145,10 @@ provides:
     version: 1.500
   Perl::Dist::WiX::Toolchain:
     file: lib/Perl/Dist/WiX/Toolchain.pm
-    version: 1.500
+    version: 1.500001
   Perl::Dist::WiX::Types:
     file: lib/Perl/Dist/WiX/Types.pm
-    version: 1.500
+    version: 1.500001
   Perl::Dist::WiX::Util::Machine:
     file: lib/Perl/Dist/WiX/Util/Machine.pm
     version: 1.500
@@ -157,7 +160,7 @@ requires:
   Alien::WiX: 0.300000
   Archive::Tar: 1.66
   Archive::Zip: 1.26
-  CPAN: 1.9462
+  CPAN: 1.9600
   Clone: 0.31
   Data::Dump::Streamer: 2.08
   Data::UUID: 1.149
@@ -171,7 +174,7 @@ requires:
   File::Path: 2.07
   File::PathList: 1.04
   File::Remove: 1.42
-  File::ShareDir: 1.00
+  File::ShareDir: 1.02
   File::Spec: 3.29
   File::Temp: 0.21
   File::pushd: 1.00
@@ -184,12 +187,13 @@ requires:
   LWP::UserAgent: 5.823
   LWP::UserAgent::WithCache: 0.06
   List::MoreUtils: 0.07
-  Module::CoreList: 2.44
-  Moose: 1.08
-  MooseX::NonMoose: 0.14
+  Module::Build: 0.38
+  Module::CoreList: 2.49
+  Moose: 2.00
+  MooseX::NonMoose: 0.18
   MooseX::Object::Pluggable: 0.0011
-  MooseX::Singleton: 0.24
-  MooseX::Types: 0
+  MooseX::Singleton: 0.26
+  MooseX::Types: 0.19
   MooseX::Types::Path::Class: 0.05
   MooseX::Types::URI: 0.02
   PAR::Dist: 0.42
@@ -200,12 +204,13 @@ requires:
   Readonly: 1.03
   Template: 2.22
   URI: 1.35
-  WiX3: 0.010002
+  WiX3: 0.010004
   Win32: 0.35
   Win32::Exe: 0.13
   Win32::File::Object: 0.01
   Win32API::File: 0.1001
   YAML::Tiny: 1.36
+  namespace::autoclean: 0.12
   namespace::clean: 0.18
   parent: 0.221
   perl: 5.010
@@ -213,6 +218,6 @@ resources:
   bugtracker: http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Perl-Dist-WiX
   homepage: http://csjewell.comyr.com/perl/
   license: http://dev.perl.org/licenses/
-  repository: http://svn.ali.as/cpan/trunk/Perl-Dist-WiX/
+  repository: http://hg.curtisjewell.name/Perl-Dist-WiX/
   x_IRC: irc://irc.perl.org/#win32
-version: 1.500
+version: 1.500001
